Fixed background of collapsed menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,7 @@ a:visited {
 }
 
 .navbar-collapse {
-
+    background-color: rgba(0,0,0,0.9);;
 }
 
 .navbar-header button {
